kubernetes/manifests/forgejo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forgejo 
  namespace: forgejo
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector: 
    matchLabels:
      app: forgejo
  template:
    metadata:
      labels:
        app: forgejo
    spec:
      containers:
        - name: forgejo
          image: codeberg.org/forgejo/forgejo:14
          ports:
            - containerPort: 3000
            - containerPort: 22
          volumeMounts:
            - name: forgejo-data
              mountPath: /data
            - name: localtime
              mountPath: /etc/localtime
              readOnly: true
      
      volumes:
        - name: forgejo-data
          persistentVolumeClaim:
            claimName: forgejo-pvc
        - name: localtime
          hostPath:
            path: /etc/localtime
