kubernetes/manifests/forgejo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: forgejo-svc
  namespace: forgejo
spec:
  selector:
    app: forgejo
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
