kubernetes/manifests/forgejo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: forgejo-ingress
  namespace: forgejo
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: forgejo.kacper-nxn.pl
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: forgejo-svc
            port:
              number: 3000
